--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
+    "@tanstack/react-query": "^5.15.0",
+    "@tanstack/react-query-next-experimental": "^5.15.0",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.15.0",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
