--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.49.2",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.15.0",
     "@testing-library/jest-dom": "^6.1.6",
     "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.11",
     "@types/node": "latest",
     "@types/react": "latest",
