--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/cache": "latest",
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
+    "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
     "@tanstack/react-query": "^5.15.0",
