--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-query": "^5.15.0",
     "@tanstack/react-query-next-experimental": "^5.15.0",
     "axios": "^1.6.3",
+    "js-cookie": "^3.0.5",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
@@ -34,6 +35,7 @@
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.11",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
