--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-query": "^5.15.0",
     "@tanstack/react-query-next-experimental": "^5.15.0",
     "axios": "^1.6.3",
+    "cookies-next": "^4.1.0",
     "js-cookie": "^3.0.5",
     "next": "latest",
     "react": "latest",
